--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--白色-->
+    <color name="white">#ffffff</color>
+    <!--灰色-->
+    <color name="gray">#ff7f7f7f</color>
 </resources>
