--- a/app/src/main/res/layout/activity_team_info_detail.xml
+++ b/app/src/main/res/layout/activity_team_info_detail.xml
@@ -11,12 +11,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="球队名"/>
 
         <TextView
             android:id="@+id/tv_team_fullname"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -26,12 +28,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="简介"/>
 
         <TextView
             android:id="@+id/tv_team_intro"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -41,12 +45,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="建队时间"/>
 
         <TextView
             android:id="@+id/tv_team_found_year"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -56,12 +62,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="球队链接"/>
 
         <TextView
             android:id="@+id/tv_team_link"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -71,12 +79,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="球队成员"/>
 
         <TextView
             android:id="@+id/tv_team_players"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -86,12 +96,14 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="体育馆"/>
 
         <TextView
             android:id="@+id/tv_team_stadiums_info"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
