--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,14 +29,16 @@
             android:textColor="@color/btn_color_selector" />
 
         <Button
+            android:id="@+id/btn_home_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/white"
-            android:text="待定"
+            android:text="exercise"
             android:textColor="@color/btn_color_selector" />
 
         <Button
+            android:id="@+id/btn_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
