整体布局微整

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.pft.liuxiaofeng.nbajames.MainActivity">
 
+    <include
+        android:id="@+id/top"
+        layout="@layout/include_toolbar" />
+
     <FrameLayout
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/top"
         android:layout_above="@+id/ll_main_bottom" />
 
     <LinearLayout
@@ -17,6 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:gravity="bottom"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <Button
@@ -34,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/white"
-            android:text="exercise"
+            android:text="play"
             android:textColor="@color/btn_color_selector" />
 
         <Button
