--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
+
+    <!--<include layout="@layout/include_toolbar" />-->
 
     <Button
         android:id="@+id/btn_auto_link"
@@ -13,9 +14,9 @@
         android:text="https://github.com/liuxiaofeng8888?tab=stars" />
 
     <!--<com.github.mikephil.charting.charts.LineChart-->
-        <!--android:id="@+id/line_chart"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <!--android:id="@+id/line_chart"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 
     <Button
         android:id="@+id/btn_plugin"
