--- a/app/src/main/res/layout/fragment_my_view.xml
+++ b/app/src/main/res/layout/fragment_my_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<include layout="@layout/include_toolbar" />-->
+    <include layout="@layout/include_toolbar" />
 
     <com.pft.liuxiaofeng.nbajames.view.WaterWaveView2
         android:layout_width="wrap_content"
