--- a/app/src/main/res/layout/fragment_nba.xml
+++ b/app/src/main/res/layout/fragment_nba.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/include_toolbar" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_nba_info"
         android:layout_width="match_parent"
