--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<include layout="@layout/include_toolbar" />-->
+    <include
+        layout="@layout/include_toolbar" />
 
     <Button
         android:id="@+id/btn_auto_link"
@@ -13,11 +17,11 @@
         android:autoLink="web"
         android:text="https://github.com/liuxiaofeng8888?tab=stars" />
 
+
     <!--<com.github.mikephil.charting.charts.LineChart-->
     <!--android:id="@+id/line_chart"-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent" />-->
-
     <Button
         android:id="@+id/btn_plugin"
         android:layout_width="wrap_content"
@@ -36,3 +40,4 @@
         android:layout_height="wrap_content"
         android:text="bluetooth" />
 </LinearLayout>
+</RelativeLayout>
