--- a/app/src/main/res/layout/fragment_nba.xml
+++ b/app/src/main/res/layout/fragment_nba.xml
@@ -10,4 +10,15 @@
         android:id="@+id/rv_nba_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <com.bartoszlipinski.recyclerviewheader2.RecyclerViewHeader
+        android:id="@+id/recyclerView_header"
+        android:layout_width="match_parent"
+        android:layout_height="180dp">
+
+        <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
+            android:id="@+id/autoScrollViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.bartoszlipinski.recyclerviewheader2.RecyclerViewHeader>
 </LinearLayout>
