--- a/app/src/main/res/layout/fragment_my_view.xml
+++ b/app/src/main/res/layout/fragment_my_view.xml
@@ -30,4 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="true" />
+
+    <Button
+        android:id="@+id/btn_databinding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="数据绑定"/>
 </LinearLayout>
