--- a/app/src/main/res/layout/activity_data_binding_demo.xml
+++ b/app/src/main/res/layout/activity_data_binding_demo.xml
@@ -3,20 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.pft.liuxiaofeng.nbajames.activity.DataBindingDemoActivity">
-<data>
-    <variable
-        name="data"
-        type="com.pft.liuxiaofeng.nbajames.databindingvm.DatabindingDemoVm"/>
-</data>
+
+    <data>
+
+        <import type="com.pft.liuxiaofeng.nbajames.activity.DataBindingDemoActivity" />
+
+        <variable
+            name="data"
+            type="DataBindingDemoActivity" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <Button
+
+        <!--<Button-->
+        <!--textColor="@{data.buttonColor}"-->
+        <!--textSize="@{data.textSize}"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:onClick="@{data.toast}"-->
+        <!--android:text="@{data.buttonText}" />-->
+
+        <android.support.v7.widget.RecyclerView
+            data="@{data.dataList}"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="@{data.toast}"
-            android:text="@{data.buttonText}"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
