--- a/app/src/main/res/layout/fragment_my_view.xml
+++ b/app/src/main/res/layout/fragment_my_view.xml
@@ -36,4 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="数据绑定"/>
+    <TextView
+        android:id="@+id/tv_numbers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="numbers"/>
 </LinearLayout>
